fun.css
@import url('https://fonts.googleapis.com/css2?family=Coiny&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Comic+Relief:wght@400;700&display=swap');

@keyframes bg-scroll {
  from {
    background-position: 0 0;
  }

  to {
    background-position: 24px 0px;
  }
}

html {
  background-color: #4e6680;
  background-size: 24px;
  background-image: url(assets/background_tile.png);
  image-rendering: pixelated;
  animation: bg-scroll 1s linear infinite;
  font-family: "Coiny";
  color: #CFCFCF;
}

body {
  margin: 8px auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 1000px;
}

h1.page-title {
  font-size: 4rem;
  margin: 0;
  text-shadow: 0 0 8px #FFF5;
}

h1,
h2,
h3 {
  margin: 0;
  /* margin-bottom: 4px; */
}

.navbar {
  width: 100%;
  display: flex;
  justify-content: space-evenly;
  background-color: #CFCFCF;
  /* outline: 4px solid #2F3B4C; */
  border-radius: 30px;
  padding-bottom: 8px;
  box-shadow: 0 0 12px #fff9, 0 -1px 4px inset #2F3B4C;
  margin-bottom: 16px;
}

.navbar a {
  color: #4EC79E;
  font-size: 1.2rem;
  letter-spacing: 2px;
  text-decoration: underline 2px dotted #4EC79E;
  font-style: italic;
}

.content {
  display: grid;
  grid-template-columns: 200px 1fr 250px;
  background-color: #CFCFCF;
  padding: 4px;
  width: 100%;
  border-radius: 30px;
  border: 2px solid #41536b;
  color: #41536b;
  overflow: hidden;
  gap: 8px;
}


.navlinks h2 {
  box-shadow: 0 5px 5px #0005;
  background-color: #4EC79E;
  color: #CFCFCF;
  font-size: 1.3rem;
  margin: 0;
  padding-bottom: 4px;
  border-left: 4px solid #FFF5;
  border-top: 4px solid #FFF5;
  border-right: 4px solid #0005;
  border-bottom: 4px solid #0005;
  text-shadow: 0 0 2px black;
  padding-left: 30px;

  /* -webkit-text-stroke: 3px #CFCFCF; */
}

.navlinks h2:first-child {
  border-top-left-radius: 28px;
}

.navlinks a {
  box-shadow: 0 5px 5px #0005;
  background-color: #83D8BC;
  display: block;
  border-left: 2px solid #FFF5;
  border-top: 2px solid #FFF5;
  border-right: 2px solid #0005;
  border-bottom: 2px solid #0005;
  text-shadow: 0 0 1.5px black;
  color: #CFCFCF;
  font-size: 1rem;
  margin: 0;
  padding-bottom: 4px;
  padding-left: 30px;
  text-decoration: underline 2px dotted #CFCFCF;
  font-style: italic;
}

.updates {
  border-top-right-radius: 28px;
  border-left: 4px solid #FFF5;
  border-top: 4px solid #FFF5;
  border-right: 4px solid #0005;
  border-bottom: 4px solid #0005;
  padding: 8px;
  box-shadow: 0 5px 5px #0005;
}

.updates ul {
  padding-left: 16px;
  margin: 0;
}

.updates h1 {
  border-top-right-radius: 28px;
  border-left: 4px solid #FFF5;
  border-top: 4px solid #FFF5;
  border-right: 4px solid #0005;
  border-bottom: 4px solid #0005;
  text-align: center;
  background-color: #4EC79E;
  text-shadow: 0 0 2px black;
  font-size: 1.3rem;
  margin: -12px;
  margin-bottom: 10px;
  color: #CFCFCF;
  letter-spacing: 1px;
}

.updates::after {
  content: "";
  display: block;
  background-color: #4EC79E;
  margin: -12px;
  border-left: 4px solid #FFF5;
  border-top: 4px solid #FFF5;
  border-right: 4px solid #0005;
  border-bottom: 4px solid #0005;
  /* box-shadow: 0 -1px 4px #0005; */
  margin-top: 4px;
}

.gifs {
  margin-top: 8px;
  border-left: 4px solid #FFF5;
  border-top: 4px solid #FFF5;
  border-right: 4px solid #0005;
  border-bottom: 4px solid #0005;
  padding: 8px;
  box-shadow: 0 5px 5px #0005;
}

.gifs h1 {
  border-left: 4px solid #FFF5;
  border-top: 4px solid #FFF5;
  border-right: 4px solid #0005;
  border-bottom: 4px solid #0005;
  text-align: center;
  background-color: #4EC79E;
  text-shadow: 0 0 2px black;
  font-size: 1.3rem;
  margin: -12px;
  margin-bottom: 10px;
  color: #CFCFCF;
  letter-spacing: 1px;
}

.gifs::after {
  content: "";
  display: block;
  background-color: #4EC79E;
  margin: -12px;
  border-left: 4px solid #FFF5;
  border-top: 4px solid #FFF5;
  border-right: 4px solid #0005;
  border-bottom: 4px solid #0005;
  /* box-shadow: 0 -1px 4px #0005; */
  margin-top: 4px;
}

.updates ul a {
  color: #8196B1;
  margin-left: 8px;
  font-size: 0.7rem;
}

.sidebar h1 {
  font-size: 1.3rem;
}


.main {
  border-left: 4px solid #FFF5;
  border-top: 4px solid #FFF5;
  border-right: 4px solid #0005;
  border-bottom: 4px solid #0005;
  /* border: 8px outset #4EC79E; */
  padding: 8px;
  box-shadow: 0 5px 5px #0005;
  text-align: center;
}

.main h1 {
  border-left: 4px solid #FFF5;
  border-top: 4px solid #FFF5;
  border-right: 4px solid #0005;
  border-bottom: 4px solid #0005;
  text-align: center;
  background-color: #4EC79E;
  text-shadow: 0 0 2px black;
  font-size: 1.5rem;
  margin: -12px;
  margin-bottom: 10px;
  color: #CFCFCF;
  letter-spacing: 1px;
}

.main::after {
  content: "";
  display: block;
  background-color: #4EC79E;
  margin: -12px;
  border-left: 4px solid #FFF5;
  border-top: 4px solid #FFF5;
  border-right: 4px solid #0005;
  border-bottom: 4px solid #0005;
  /* box-shadow: 0 -1px 4px #0005; */
  margin-top: 0;
}

.main p {
  font-weight: bold;
  font-family: "Comic Relief";
  font-size: 0.9rem;
}

.main .gup {
  height: 200px;
}

.main .seperator {
  display: block;
  width: 100%;
  margin-top: 16px;
}

.main .part1 {
  display: flex;
  align-items: center;
}

